# foxhole-stockpiles-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.cmd  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
foxhole_stockpiles/: __init__.py  main.py
foxhole_stockpiles/config/: env_interpolation.py  settings.py
foxhole_stockpiles/core/: __init__.py  config.py  env_interpolation.py
foxhole_stockpiles/enums/: __init__.py  auth_type.py
foxhole_stockpiles/i18n/: __init__.py  translator.py
foxhole_stockpiles/i18n/translations/: de.json  en.json  es.json  fr.json  pt.json  ru.json  tr.json  zh.json
foxhole_stockpiles/models/: __init__.py  keypress.py
foxhole_stockpiles/models/singleton/: singletonmeta.py
foxhole_stockpiles/ui/: __init__.py  app.py  modal_window.py  settings_window.py
