[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxhole-stockpiles-client"
version = "1.0.0"
description = "Desktop client for capturing and sending Foxhole stockpile screenshots to the processing server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
maintainers = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
keywords = ["foxhole", "gaming", "screenshot", "client", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "ttkbootstrap>=1.10.1",
]

[project.optional-dependencies]
windows = [
    "PyWinCtl>=0.4",
    "pynput>=1.7.7",
]
dev = [
    # Code Quality & Formatting
    "mypy>=1.6.0",
    "ruff>=0.3.4",
    "pre-commit>=3.5.0",
    "types-pillow",

    # Build tools
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/xurxogr/foxhole-stockpiles-client"
Repository = "https://github.com/xurxogr/foxhole-stockpiles-client"
Issues = "https://github.com/xurxogr/foxhole-stockpiles-client/issues"

[tool.setuptools.packages.find]
include = ["foxhole_stockpiles*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ttkbootstrap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynput.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywinctl.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring checks)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
foxhole-client = "foxhole_stockpiles.main:main"
